# maelir

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile-target.txt  conanfile.txt  mapeditor_metadata.yaml  requirements.txt
.github/workflows/: ci.yml
cmake/: bin_to_source.cmake  generate_version.cmake  tilegen.cmake  version.hh.in
doc/: ram.md  structure.pu
qt/: CMakeLists.txt  display_qt.cc  display_qt.hh  gps_simulator.cc  gps_simulator.hh  lv_conf.h  main.cc  mainwindow.cc  mainwindow.hh  mainwindow.ui  mapeditor_graphicsview.cc  mapeditor_graphicsview.hh  mapeditor_main.cc  mapeditor_mainwindow.cc  mapeditor_mainwindow.hh  mapeditor_mainwindow.ui  nvm_host.cc  nvm_host.hh  ota_updater_host.cc  ota_updater_host.hh  png_test.cc  simulator_main.cc  simulator_mainwindow.cc  simulator_mainwindow.hh  simulator_mainwindow.ui
qt/lvgl_setup/: lv_conf.h
qt/os/: base_thread_qt.cc  semaphore_qt.cc
qt/uart_bridge/: CMakeLists.txt  uart_bridge.cc
qt/uart_bridge/include/: uart_bridge.hh
src/: CMakeLists.txt
src/application_state/: CMakeLists.txt  application_state.cc
src/application_state/include/: application_state.hh
src/base_thread/: CMakeLists.txt
src/base_thread/include/: base_thread.hh
src/button_debouncer/: CMakeLists.txt  button_debouncer.cc
src/button_debouncer/include/: button_debouncer.hh
src/event_serializer/: CMakeLists.txt  event_serializer.cc  event_serializer_state_machine.pu
src/event_serializer/include/: event_serializer.hh
src/gps_listener/: CMakeLists.txt  gps_listener.cc
src/gps_listener/include/: gps_listener.hh
src/gps_reader/: CMakeLists.txt  gps_reader.cc  tile_position_converter.cc
src/gps_reader/include/: gps_mux.hh  gps_port.hh  gps_reader.hh  gps_utils.hh  position_converter.hh
src/gps_reader/include/mock/: mock_gps_port.hh
src/gps_simulator/: CMakeLists.txt  gps_simulator.cc  gps_simulator_state_machine.pu
src/gps_simulator/include/: gps_simulator.hh
src/include/: base_thread.hh  gps_data.hh  gps_position.hh  i_display.hh  image.hh  listener_cookie.hh  nmea_parser.hh  rect.hh  semaphore.hh  tile.hh  time.hh  timer_manager.hh
src/include/hal/: i_display.hh  i_gpio.hh  i_gps.hh  i_input.hh  i_nvm.hh  i_ota_updater.hh  i_uart.hh
src/input/: CMakeLists.txt  encoder_input.cc
src/input/include/: encoder_input.hh
src/nmea_parser/: CMakeLists.txt  nmea_parser.cc  nmea_state_machine.pu
src/ota_updater/: CMakeLists.txt  ota_updater.cc
src/ota_updater/include/: ota_updater.hh
src/painter/: CMakeLists.txt  painter.cc
src/painter/include/: image.hh  painter.hh
src/rotary_encoder/: CMakeLists.txt  rotary_encoder.cc
src/rotary_encoder/include/: rotary_encoder.hh
src/route_service/: CMakeLists.txt  route_service.cc
src/route_service/include/: i_route_listener.hh  route_service.hh
src/route_service/include/mock/: mock_route_listener.hh
src/router/: CMakeLists.txt  route_iterator.cc  route_iterator_state_machine.pu  route_utils.hh  router.cc
src/router/include/: route_iterator.hh  route_utils.hh  router.hh
src/storage/: CMakeLists.txt  storage.cc
src/storage/include/: storage.hh
src/tile_producer/: CMakeLists.txt  tile_producer.cc
src/tile_producer/include/: tile_producer.hh  tile_utils.hh
src/timer_manager/: CMakeLists.txt  timer_manager.cc
src/timer_manager/include/: timer_manager.hh
src/trip_computer/: CMakeLists.txt  trip_computer.cc
src/trip_computer/include/: trip_computer.hh
src/uart_event_forwarder/: CMakeLists.txt  uart_event_forwarder.cc
src/uart_event_forwarder/include/: uart_event_forwarder.hh
src/uart_event_listener/: CMakeLists.txt  uart_event_listener.cc
src/uart_event_listener/include/: uart_event_listener.hh
src/ui/: CMakeLists.txt  cohen_sutherland.hh  lv_event_listener.hh  map_screen.cc  map_screen.hh  menu_screen.cc  menu_screen.hh  ui.cc  ui_state_machine.pu  updating_screen.cc  updating_screen.hh
src/ui/include/: ui.hh
test/unittest/: CMakeLists.txt  mock_time.cc  mock_time.hh  route_test_utils.hh  test_application_state.cc  test_event_serializer.cc  test_gps_reader.cc  test_nmea_parser.cc  test_router.cc  test_timer_manager.cc  test_trip_computer.cc  thread_fixture.hh
test/unittest/os/: base_thread_unittest.cc  semaphore_unittest.cc
tools/: bin_to_source.py  image_save.py  tiler.py
